--- a/.computenest/config.yaml
+++ b/.computenest/config.yaml
@@ -48,6 +48,6 @@ AcrImageBuilder:
     Tag: v1.0
 HelmChartBuilder:
   HelmChart_1:
-    HelmChartPath: 'resources/artifact_resources/helm_chart/spring-boot-chart-0.1.0.tgz'
+    HelmChartPath: '.computenest/resources/artifact_resources/helm_chart/spring-boot-chart-0.1.0.tgz'
     RepoName: spring-boot-chart
     Tag: 0.1.0
