--- a/.computenest/config.yaml
+++ b/.computenest/config.yaml
@@ -43,11 +43,11 @@ Artifact:
       Tag: ${HelmChartBuilder.HelmChart_1.Tag}
 AcrImageBuilder:
   AcrImage_1:
-    DockerFilePath: 'resources/artifact_resources/acr_image/Dockerfile'
+    DockerFilePath: '.computenest/resources/artifact_resources/acr_image/Dockerfile'
     RepoName: spring-boot-demo
     Tag: v1.0
 HelmChartBuilder:
   HelmChart_1:
-    HelmChartPath: '.computenest/resources/artifact_resources/helm_chart/spring-boot-chart-0.1.0.tgz'
+    HelmChartPath: 'resources/artifact_resources/helm_chart/spring-boot-chart-0.1.0.tgz'
     RepoName: spring-boot-chart
     Tag: 0.1.0
